<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/string_inbox_navDrawerUser"/>

        <item android:id="@+id/nav_send_message"
            android:icon="@drawable/ic_send"
            android:title="@string/string_sendMessage_navDrawerUser"/>
        <item android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment"
            android:title="@string/string_payments_navDrawerUser"/>




    </group>


    <item android:title="@string/string_othersTitle_navDrawerUser">
        <menu>
            <item android:id="@+id/nav_location"
                  android:icon="@drawable/ic_location"
                  android:title="@string/string_location_navDrawerUser"/>
            <item android:id="@+id/nav_bug_report"
                android:icon="@drawable/ic_bug_report"
                android:title="@string/string_bugReport_navDrawerUser"/>
            <item android:id="@+id/nav_about_me"
                android:icon="@drawable/ic_about"
                android:title="@string/string_about_navDrawerUser"/>
            <item android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_logout"
                android:title="@string/string_logOut_navDrawerUser"/>
        </menu>

    </item>
</menu>