<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:attv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"

    tools:context=".RegisterLogin.LoginActivity">

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_login"
        android:fontFamily="@font/source_sans_pro"
        android:text="Login"
        android:textColor="#4c84ff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_login"
        app:layout_constraintTop_toBottomOf="@+id/showPassword_login" />

    <com.dragankrstic.autotypetextview.AutoTypeTextView
        android:id="@+id/welcome_textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="Welcome"
        android:textColor="#4c84ff"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/email_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="170dp"
        android:height="50dp"
       android:background="@drawable/edittext_dropshadow"
        android:ems="10"
        android:fontFamily="@font/source_sans_pro"
        android:hint="@string/enter_email_login"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_dropshadow"
        android:ems="10"
        android:fontFamily="@font/source_sans_pro"
        android:hint="@string/enter_password_login"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/email_login"
        app:layout_constraintStart_toStartOf="@+id/email_login"
        app:layout_constraintTop_toBottomOf="@+id/email_login" />

    <CheckBox
        android:id="@+id/showPassword_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/show_password_login"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/password_login"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <TextView
        android:id="@+id/register_textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="Don't have account?"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_button_login"
        app:layout_constraintStart_toStartOf="@+id/login_button_login"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

    <ProgressBar
        android:id="@+id/progressBar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_textView_login" />
</androidx.constraintlayout.widget.ConstraintLayout>